syntax = "proto3";

package index;

message Kifu {
  string id = 1;
  repeated string first_players = 2;
  repeated string second_players = 3;
  int64 start_ts = 4;
  int64 end_ts = 5;
  repeated string board_ids = 6;
  bool alias = 7;
}

message Step {
  message StepId {
    string kifu_id = 1;
    int32 seq = 2;
    bool finished = 3;
  }
  StepId id = 1;
  string board_id = 2;
  int64 game_start_ts = 3;
}

message Account {
  string id = 1;
  string player_id = 2;
}

message Comment {
  string id = 1;
  string owner_id = 2;
  int64 created_ms = 3;
  string board_id = 4;
  string kifu_id = 5;
}
